feat: implementa fluxo completo de usuario.