@@ -1,5 +1,7 @@
 package br.com.adocao.system.service;
 
+import br.com.adocao.system.dto.UsuarioRequestDTO;
+import br.com.adocao.system.dto.UsuarioResponseDTO;
 import br.com.adocao.system.mapper.UsuarioMapper;
 import br.com.adocao.system.model.Usuario;
 import br.com.adocao.system.repository.UsuarioRepository;
@@ -12,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
@@ -20,88 +21,137 @@ public class UsuarioService {
     @Autowired
     private UsuarioRepository repository;
 
-    // BUSCAR (GET por ID)
-    public UsuarioDTO buscar(Long id) {
+    // BUSCAR POR ID
+    public UsuarioResponseDTO buscar(Long id) {
+
         Usuario usuario = repository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
-        return UsuarioMapper.toDTO(usuario);
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Usuário não encontrado"
+                ));
+
+        return UsuarioMapper.toResponseDTO(usuario);
     }
 
-    // CRIAR (INSERT)
-    public UsuarioDTO criar(UsuarioDTO dto) {
+    // CRIAR
+    public UsuarioResponseDTO criar(UsuarioRequestDTO dto) {
+
         validarCpfEmailIdade(dto);
 
         Usuario usuario = UsuarioMapper.toEntity(dto);
-        usuario.setAtivo(dto.getAtivo() != null ? dto.getAtivo() : true);
 
         Usuario salvo = repository.save(usuario);
-        return UsuarioMapper.toDTO(salvo);
+
+        return UsuarioMapper.toResponseDTO(salvo);
     }
 
-    // ATUALIZAR (UPDATE)
-    public UsuarioDTO atualizar(Long id, UsuarioDTO dto) {
+    // ATUALIZAR
+    public UsuarioResponseDTO atualizar(Long id, UsuarioRequestDTO dto) {
+
         Usuario usuario = repository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Usuário não encontrado"
+                ));
 
-        if (!usuario.getCpf().equals(dto.getCpf())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "O CPF não pode ser alterado");
+        // CPF não pode ser alterado
+        if (!usuario.getCpf().equals(dto.cpf())) {
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "O CPF não pode ser alterado"
+            );
         }
 
-        if (!usuario.getEmail().equals(dto.getEmail()) && repository.existsByEmail(dto.getEmail())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "E-mail já em uso");
+        // Verifica se o e-mail foi alterado e se já está em uso
+        if (!usuario.getEmail().equals(dto.email())
+                && repository.existsByEmail(dto.email())) {
+
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "E-mail já em uso"
+            );
         }
 
-        usuario.setNome(dto.getNome());
-        usuario.setEmail(dto.getEmail());
-        usuario.setIdade(dto.getIdade());
-        usuario.setTelefone(dto.getTelefone());
-        usuario.setEndereco(dto.getEndereco());
-        if (dto.getSenha() != null && !dto.getSenha().isBlank()) {
-            usuario.setSenha(dto.getSenha()); // Atualiza a senha se fornecida
+        usuario.setNome(dto.nome());
+        usuario.setEmail(dto.email());
+        usuario.setIdade(dto.idade());
+        usuario.setTelefone(dto.telefone());
+        usuario.setEndereco(dto.endereco());
+
+        // Só altera a senha se uma nova senha for enviada
+        if (dto.senha() != null && !dto.senha().isBlank()) {
+            usuario.setSenha(dto.senha());
         }
-        usuario.setAtivo(dto.getAtivo() != null ? dto.getAtivo() : usuario.getAtivo());
 
         Usuario atualizado = repository.save(usuario);
-        return UsuarioMapper.toDTO(atualizado);
+
+        return UsuarioMapper.toResponseDTO(atualizado);
     }
 
-    // LISTAR (com paginação e filtro por status)
-    public List<UsuarioDTO> listar(String status, int page, int size) {
+    // LISTAR COM PAGINAÇÃO E FILTRO POR STATUS
+    public List<UsuarioResponseDTO> listar(
+            String status,
+            int page,
+            int size
+    ) {
+
         Pageable pageable = PageRequest.of(page, size);
+
         Page<Usuario> pagina;
 
         if (status != null && !status.isBlank()) {
-            Boolean ativo = status.equalsIgnoreCase("ativo") || status.equalsIgnoreCase("true");
+
+            Boolean ativo =
+                    status.equalsIgnoreCase("ativo")
+                            || status.equalsIgnoreCase("true");
+
             pagina = repository.findByAtivo(ativo, pageable);
+
         } else {
+
             pagina = repository.findAll(pageable);
         }
 
-        return pagina.stream()
-                .map(UsuarioMapper::toDTO)
-                .collect(Collectors.toList());
+        return pagina.getContent()
+                .stream()
+                .map(UsuarioMapper::toResponseDTO)
+                .toList();
     }
 
-    // EXCLUIR (DELETE)
+    // EXCLUIR
     public void deletar(Long id) {
+
         Usuario usuario = repository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND,
+                        "Usuário não encontrado"
+                ));
 
         repository.delete(usuario);
     }
 
-    // VALIDAÇÕES AUXILIARES
-    private void validarCpfEmailIdade(UsuarioDTO dto) {
-        if (repository.existsByCpf(dto.getCpf())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "CPF já cadastrado");
+    // VALIDAÇÕES
+    private void validarCpfEmailIdade(UsuarioRequestDTO dto) {
+
+        if (repository.existsByCpf(dto.cpf())) {
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "CPF já cadastrado"
+            );
         }
 
-        if (repository.existsByEmail(dto.getEmail())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "E-mail já cadastrado");
+        if (repository.existsByEmail(dto.email())) {
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "E-mail já cadastrado"
+            );
         }
 
-        if (dto.getIdade() < 18) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Idade mínima para cadastro é 18 anos");
+        if (dto.idade() < 18) {
+            throw new ResponseStatusException(
+                    HttpStatus.BAD_REQUEST,
+                    "Idade mínima para cadastro é 18 anos"
+            );
         }
     }
 }
